--- a/login.html
+++ b/login.html
@@ -3,19 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <title>Restricted site</title>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300&amp;subset=latin" media="all">
     <style>
         body {
             margin: 50px;
             background-color: #009fe3;
             color: #fff;
+            font-family: Roboto,sans-serif;
+            font-weight: 300;
         }
 
-        h1{
-            font-family: Helvetica, Arial, sans-serif;
-            width: 100%;
-            text-align: center;
+        h1 {
+            font-weight: 300;
         }
-
         .container {
             text-align: center;
         }
@@ -28,55 +28,53 @@
         }
 
         form {
-            margin: 0 auto;
-            width: 400px;
+            margin: 20px auto;
+            max-width: 400px;
+        }
+
+        input {
+            font-size: 1.2em;
         }
 
         input[type="text"],
         input[type="password"] {
-            border: 1px solid #122DB0;
-            display: block;
+            border: none;
+
             width: 100%;
-            height: 30px;
-            padding: 4px 8px;
+            padding: 12px 8px;
             margin-bottom: 16px;
+            border-radius: 3px;
         }
 
         input[type="submit"]{
-            background: white;
-            border: 1px solid #122DB0;
-            height: 26px;
+            border: 2px solid #fff;
+            background: #fafafa;
+            color: #444;
             cursor: pointer;
-            padding: 0 16px;
-            -webkit-transition: box-shadow 200ms ease-in-out;
-            -moz-transition: box-shadow 200ms ease-in-out;
-            -ms-transition: box-shadow 200ms ease-in-out;
-            -o-transition: box-shadow 200ms ease-in-out;
-            transition: box-shadow 200ms ease-in-out;
+            padding: 6px 24px;
+            border-radius: 8px;
         }
 
         input[type="submit"]:hover {
-            -webkit-box-shadow: 0 0 15px #323f7d;
-            -moz-box-shadow: 0 0 15px #323f7d;
-            box-shadow: 0 0 15px #323f7d;
+            background: #eee;
+            background: #eaeaea;
         }
 
         input[type="submit"]:active {
-            -webkit-box-shadow: inset 0 0 15px #323f7d;
-            -moz-box-shadow: inset 0 0 15px #323f7d;
-            box-shadow: inset 0 0 15px #323f7d;
+            background: #dddddd;
+            background: #dadada;
         }
 
     </style>
 </head>
 <body>
 <div class="container">
-    <h1>Restricted. Please log in...</h1>
+    <h1>Restricted site - Login required.</h1>
     <img src="?logo=true">
     <form method="post" action="">
-        <input type="text" name="username" placeholder="username"/>
-        <input type="password" name="password" placeholder="password"/>
-        <input type="submit" value="login"/>
+        <input type="text" name="username" placeholder="Username"/>
+        <input type="password" name="password" placeholder="Password"/>
+        <input type="submit" value="Login"/>
     </form>
 </div>
 </body>
